@@ -1,6 +1,7 @@
 virtualenvwrapper (2.6-1) experimental; urgency=low
 
   * New upstream version.
+  * refresh debian/patches/debianspecific-setup.py.patch
 
  -- Jan Dittberner <jandd@debian.org>  Mon, 27 Dec 2010 15:45:59 +0100
 
